java english iter_7